# Sentinel

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
backend/: handler.py  models.py  requirements.txt
backend/agent/: cli.py  loop.py  prompts.py  tools.py
backend/eval/: cases.json  run.py  scoring.py
backend/logging/: tracker.py
backend/rag/: embed.py  embedder.py  search.py
corpus/: patterns.json
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: HistorySidebar.tsx  InputPanel.tsx  ResultPanel.tsx
frontend/src/hooks/: useHistory.ts
frontend/src/lib/: api.ts
infra/: main.tf  outputs.tf  variables.tf
scripts/: deploy.sh  package-lambda.sh
